added threaded output reader to j3mifier wrapper