@@ -1,13 +1,10 @@
 package j3m;
 
-import java.io.BufferedReader;
-import java.io.BufferedWriter;
 import java.io.File;
-import java.io.FileWriter;
-import java.io.InputStreamReader;
+import java.util.Arrays;
 
+import util.StreamDump;
 import util.Util;
-
 import framework.FrameworkProperties;
 
 
@@ -17,37 +14,16 @@ public class J3MWrapper {
 		FrameworkProperties config = FrameworkProperties.getInstance();
 		String command = Util.replaceFileMarkers(config.getJ3MGetMetadata(), inputFile.getAbsolutePath(), outputFile.getAbsolutePath() );
 		try {
-				//figure out the file name
-				Process p=Runtime.getRuntime().exec(command); 
-				p.waitFor(); 
+			
+			ProcessBuilder processBuilder = new ProcessBuilder(Arrays.asList(command.split(" ")));
+			processBuilder.redirectErrorStream(true);
+			Process p = processBuilder.start();
+			new Thread(new StreamDump(p.getInputStream(), outputFile), "output stream").start();
+			p.waitFor(); 
 				
-				BufferedReader reader=new BufferedReader(new InputStreamReader(p.getErrorStream())); 
-				String line = reader.readLine();
-
-	            while(line != null) {
-	                System.err.println(line);
-	                line = reader.readLine();
-	            }
-	            
-	            reader=new BufferedReader(new InputStreamReader(p.getInputStream())); 
-			    line = reader.readLine();
-			    
-			    FileWriter writer = new FileWriter(outputFile);
-				BufferedWriter out = new BufferedWriter(writer);
-				try {
-					while (line != null) {
-						out.write(line);
-						line = reader.readLine();
-					}
-				} catch (Exception e) {
-					throw new J3MException("Could create metadata file: " + outputFile.getAbsolutePath(), e);
-				}finally{
-					out.close();
-				}
-				
-			} catch (Exception e) {
-				throw new J3MException("Could not run the j3mParser command: " + command, e);
-			} 
+		} catch (Exception e) {
+			throw new J3MException("Could not run the j3mParser command: " + command, e);
+		} 
 
 	}
 }
